--- a/styles.css
+++ b/styles.css
@@ -26,20 +26,33 @@ body {
   }
 
   /* Navigation styles */
+  nav{
+    align-items: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
   nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   nav ul li {
     display: inline-block;
-    margin: 0 10px;
+    margin: 10px 10px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   nav ul li a {
+    padding: 20px;
     color: #fff;
+    text-align: center;
     text-decoration: none;
   }
 
@@ -59,22 +72,30 @@ body {
   }
   .imp-link ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+    margin: 0px;
+    padding-left: 1px;
+    padding-top: 3px;
+    
   }
 
   .imp-link ul li {
     display: inline-block;
-    padding: 5px;
-    margin: 5px;
+    padding-top:3px;
+    padding-left: 1px;
+    margin-right: 10px;
+    margin-top: 5px;
   }
 
   .imp-link ul li a {
     color:black;
     text-decoration: none;
-    position:relative;
-    left: -652px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 0px;
+    margin-right: 10px;
+    margin-top: 5px;
+    padding-top: 3px;
+    padding-left: 0;
     
   }
   .imp-link ul li a:hover {
