--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,13 @@ body {
   /* Global styles */
   body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    color: #333;
+    background: radial-gradient(circle at 74.2% 50.9%, rgb(14, 72, 222) 5.2%, rgb(3, 22, 65) 75.3%);
+    
   }
 
   /* Header styles */
   header {
-    background-color: #333;
+    background: linear-gradient(171.8deg, rgb(5, 111, 146) 13.5%, rgb(6, 57, 84) 78.6%);
     padding: 20px;
     text-align: center;
     margin-bottom: 10px;
@@ -40,7 +40,9 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
-
+ #skills ul li{
+   margin-bottom: 15px;
+ }
   nav ul li {
     display: inline-block;
     margin: 10px 10px;
@@ -63,6 +65,18 @@ body {
     background-color: #fff;
 
   }
+  a{
+    text-decoration: none;
+    color: blueviolet;
+  }
+  a:hover{
+    color:blue;
+    cursor: pointer;
+    background-color: beige;
+  }
+  a:visited{
+    color:blueviolet;
+  }
   .contact-form{
      padding: 10px;
      margin: 10px;
@@ -71,7 +85,7 @@ body {
     margin-left: 26px;
   }
   .imp-link ul {
-    list-style: none;
+    list-style:none;
     margin: 0px;
     padding-left: 1px;
     padding-top: 3px;
@@ -106,7 +120,7 @@ body {
 
   /* Footer styles */
   footer {
-    background-color: #333;
+    background: linear-gradient(171.8deg, rgb(5, 111, 146) 13.5%, rgb(6, 57, 84) 78.6%);
     color: #fff;
     padding: 20px;
     text-align: center;
