--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,9 @@ body {
   /* Global styles */
   body {
     font-family: Arial, sans-serif;
-    background: radial-gradient(circle at 74.2% 50.9%, rgb(14, 72, 222) 5.2%, rgb(3, 22, 65) 75.3%);
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(158,158,255,1) 0%, rgba(0,212,255,1) 79%);
+  
     
   }
 
